feat: add purging outdated attributes check/repair
Fixes #201